--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">PMV2</string>
+    <string name="nombres">Ingrese su nombre</string>
+    <string name="apellidos">Ingrese su apellido</string>
+    <string name="telefono">Ingrese su telefono\n</string>
+    <string name="btn_procesar">Procesar</string>
 </resources>
